<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp"
    android:layout_marginTop="10dp"
    android:orientation="horizontal"
    android:paddingHorizontal="10dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivCurrencyImage"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:src="@drawable/ic_usd"
            app:shapeAppearanceOverlay="@style/roundedImageView" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="0.8"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCurrencyCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/department_currency_code_example"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCurrencyExchangeDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/department_currency_scale_example"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvCurrencyBuyRate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_weight="0.25"
        android:text="@string/department_currency_rate_example"
        android:textAlignment="center"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tvCurrencySaleRate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_weight="0.25"
        android:text="@string/department_currency_rate_example"
        android:textAlignment="center"
        android:textSize="17sp" />
</LinearLayout>